logging/kibana-ingress-rancher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: nginx
        meta.helm.sh/release-name: rancher
        meta.helm.sh/release-namespace: cattle-system
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
        nginx.ingress.kubernetes.io/ssl-redirect: "false"

    name: kibana
    namespace: cattle-logging-system
spec:
    ingressClassName: nginx
    rules:
        - host: rancher-kibana.nsis.nira.go.ug
          http:
              paths:
                  - backend:
                        service:
                            name: elasticsearch-kibana
                            port:
                                number: 5601
                    path: /
                    pathType: ImplementationSpecific
